--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_swiper_null_safety: ^1.0.2
   flutter_svg: ^1.0.3
   http: ^0.13.4
+  email_validator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
