--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,12 @@ dependencies:
   flutter_svg: ^1.0.3
   http: ^0.13.4
   email_validator: ^2.0.1
+  flutter_chat_ui: ^1.5.5
+  file_picker: ^4.3.3
+  image_picker: ^0.8.4+6
+  mime: ^1.0.1
+  uuid: ^3.0.5
+  open_file: ^3.2.1
 
 dev_dependencies:
   flutter_test:
